--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "master", "old-android" ]
   pull_request:
     branches: [ "master" ]
-
+  workflow_dispatch: 
 jobs:
   build:
 
